--- a/home.html
+++ b/home.html
@@ -35,16 +35,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="home.html">Home </a></li>
-                    <li class="nav-item"><a class="nav-link" href="backyard-glamping.html">Glamping</a></li>
-                    <li class="nav-item"><a class="nav-link" href="glamping-party.html">Lounge</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                   </ul>
                   <ul class="navbar-nav d-none d-lg-block px-4">
                     <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." width="80"></a></li>
                   </ul>
                   <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" href="picnic.html">Picnics </a></li>
-                    <li class="nav-item"><a class="nav-link" href="policies.html">Policies </a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="glamping.html">Glamping</a></li>
+                    <li class="nav-item"><a class="nav-link" href="lounge.html">Lounge</a></li>
+                    <li class="nav-item"><a class="nav-link" href="picnic.html">Picnic</a></li>
                   </ul>
                 </div>
               </div>
@@ -75,7 +75,7 @@
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <div class="overlay-image" style="background-image: url(img/HD-photos/glamp-table.jpeg); background-position: center; background-repeat: no-repeat; width: 100%; height: 40rem; background-size: cover;"></div>
+                      <div class="overlay-image" style="background-image: url(img/HD-photos/glamp-clients2.jpeg); background-position: center; background-repeat: no-repeat; width: 100%; height: 40rem; background-size: cover;"></div>
                       <div class="container carousel-container">
                         <div class="row">
                           <div class="col-12">
@@ -126,25 +126,19 @@
                 <p class="text-center lead">Customize your Glamping</p>
                 <div class="container pt-lg-5 d-flex justify-content-center">
                     <div class="row">
-                    <div class="col col-lg-3 g-3 d-flex justify-content-center">
+                    <div class="col col-lg-4 g-3 d-flex justify-content-center">
                         <figure>
                         <img class="add-on-imgs" id="charcuterie-add-on" src="img/HD-photos/add-on3.jpeg" alt="">
                         <figcaption class="lead text-center add-on-text pt-3">Charcuterie</figcaption>
                         </figure>
                     </div>
-                    <div class="col col-lg-3 g-3 d-flex justify-content-center">
-                        <figure>
-                        <img class="add-on-imgs" id="picnic-table-add-on" src="img/HD-photos/add-on.jpeg" alt="">
-                        <figcaption class="lead text-center add-on-text pt-3">Picnic Table</figcaption>
-                        </figure>
-                    </div>
-                    <div class="col col-lg-3 g-3 d-flex justify-content-center">
+                    <div class="col col-lg-4 g-3 d-flex justify-content-center">
                         <figure>
                         <img class="add-on-imgs" id="camera-add-on" src="img/HD-photos/add-on1.jpeg" alt="">
                         <figcaption class="lead text-center add-on-text pt-3">Instant camera</figcaption>
                         </figure>
                     </div>
-                    <div class="col col-lg-3 g-3 d-flex justify-content-center">
+                    <div class="col col-lg-4 g-3 d-flex justify-content-center">
                         <figure>
                         <img class="add-on-imgs" id="balloons-add-on" src="img/HD-photos/add-on5.jpeg" alt="">
                         <figcaption class="lead text-center add-on-text pt-3">Balloons</figcaption>
