--- a/lounge.html
+++ b/lounge.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Details by Cyn | Glamping</title>
+    <title>Details by Cyn | Lounge</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -24,61 +24,68 @@
     <link rel="stylesheet" href="/webfontkit-20220321-172217/stylesheet.css">
   </head>
   <body>
+    <!-- navbar-->
     <section class="pb-0">
-      <div class="container-fluid px-0 pnb-4" id="glamping-background" >
+      <div class="container-fluid px-0 pnb-4" id="lounge-background">
         <header class="header">
-          <nav class="navbar navbar-expand-lg navbar-light position-absolute w-100" id="navbar">
-            <div class="container"><a class="navbar-brand d-block d-lg-none" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." height="40px" width="60"></a>
-              <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto">
-                  <li class="nav-item"><a class="nav-link" href="home.html">Home </a></li>
-                  <li class="nav-item"><a class="nav-link" href="backyard-glamping.html">Glamping</a></li>
-                  <li class="nav-item"><a class="nav-link" href="glamping-party.html">Lounge</a></li>
-                </ul>
-                <ul class="navbar-nav d-none d-lg-block px-4">
-                  <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." width="80"></a></li>
-                </ul>
-                <ul class="navbar-nav me-auto">
-                  <li class="nav-item"><a class="nav-link" href="picnic.html">Picnics </a></li>
-                  <li class="nav-item"><a class="nav-link" href="policies.html">Policies </a></li>
-                  <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
+          <header class="header">
+            <nav class="navbar navbar-expand-lg navbar-light position-absolute w-100" id="navbar">
+              <div class="container"><a class="navbar-brand d-block d-lg-none" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." height="40px" width="60"></a>
+                <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="home.html">Home </a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                  </ul>
+                  <ul class="navbar-nav d-none d-lg-block px-4">
+                    <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." width="80"></a></li>
+                  </ul>
+                  <ul class="navbar-nav me-auto">
+                    <li class="nav-item"><a class="nav-link" href="glamping.html">Glamping</a></li>
+                    <li class="nav-item"><a class="nav-link" href="lounge.html">Lounge</a></li>
+                    <li class="nav-item"><a class="nav-link" href="picnic.html">Picnic</a></li>
+                  </ul>
+                </div>
               </div>
-            </div>
-          </nav>
+            </nav>
+          </header>
         </header>
-        <div class="row transparent-bg">
+        <div class="row transparent-bg text-center">
           <div class="col-12" style="margin-top: 170px;">
-              <h1>Glamping</h1>
+            <h1>Lounge</h1>
           </div>
           <div class="col-12">
-            <img class="mt-4" src="/img/HD-photos/glamp-tent5.jpeg" alt="Tent">
+            <img class="mt-4" src="/img/HD-photos/cynthia-family.jpeg" alt="cynthia's family">
           </div>
+
           <div class="col-12 content-styling">
             <h5 class="mt-4">Includes</h5>
             <ul class="px-5">
               <li>Weather-proof canvas 4.5m bell tent (requires 25’ by 25’ space)</li>
-              <li>Queen memory foam bed</li>
-              <li>Decor, rugs and throw pillows  </li>
-              <li>Side table</li>
-              <li>Small trash can </li>
-              <li>Hand sanitizer </li>
-              <li>Outdoor/indoor lighting</li>
+              <li>Floor cushions </li>
+              <li>Decor, rugs and throw pillows</li>
+              <li>Picnic table</li>
+              <li>Basket with throw blankets</li>
+              <li>Small trash can</li>
+              <li>Hand sanitizer</li>
+              <li>Outdoor/indoor lighting  </li>
               <li>Custom letter board announcement</li>
               <li>Board game</li>
-              <li>Set and pick up is all included</li>
+              <li>Set up and teardown is included </li>
             </ul>
             <h5>Price</h5>
-            <p>$450 a night<sup>*</sup> </p>
+            <p>$450 a night<sup>*</sup></p>
             <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
           </div>
           <div class="col-12 mb-3">
             <button type="button" class="btn btn-design">Book Now</button>
           </div>
+        
         </div>
-      </div>
 
+
+      </div>
     </section>
     <footer class="py-4" style="background: #111">
       <div class="container text-center">
@@ -89,7 +96,7 @@
               <h6 class="text-muted mb-0 py-2 me-3">Follow us<span class="ms-3">-</span></h6>
               <ul class="list-inline small mb-0 text-white">
                 <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Glamping-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
               </ul>
             </div>
           </div>
