--- a/picnic.html
+++ b/picnic.html
@@ -35,16 +35,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="home.html">Home </a></li>
-                    <li class="nav-item"><a class="nav-link" href="backyard-glamping.html">Glamping</a></li>
-                    <li class="nav-item"><a class="nav-link" href="glamping-party.html">Lounge</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                   </ul>
                   <ul class="navbar-nav d-none d-lg-block px-4">
                     <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." width="80"></a></li>
                   </ul>
                   <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" href="picnic.html">Picnics </a></li>
-                    <li class="nav-item"><a class="nav-link" href="policies.html">Policies </a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="glamping.html">Glamping</a></li>
+                    <li class="nav-item"><a class="nav-link" href="lounge.html">Lounge</a></li>
+                    <li class="nav-item"><a class="nav-link" href="picnic.html">Picnic</a></li>
                   </ul>
                 </div>
               </div>
