--- a/about.html
+++ b/about.html
@@ -37,16 +37,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="home.html">Home </a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="backyard-glamping.html">Glamping</a></li>
+                    <li class="nav-item"><a class="nav-link" href="glamping-party.html">Lounge</a></li>
                   </ul>
                   <ul class="navbar-nav d-none d-lg-block px-4">
                     <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." width="80"></a></li>
                   </ul>
                   <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" href="glamping.html">Glamping</a></li>
-                    <li class="nav-item"><a class="nav-link" href="lounge.html">Lounge</a></li>
-                    <li class="nav-item"><a class="nav-link" href="picnic.html">Picnic</a></li>
+                    <li class="nav-item"><a class="nav-link" href="picnic.html">Picnics </a></li>
+                    <li class="nav-item"><a class="nav-link" href="policies.html">Policies </a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                   </ul>
                 </div>
               </div>
@@ -55,16 +55,16 @@
         </header>
         <div class="row transparent-bg text-center" >
           <div class="col-12" style="margin-top: 170px;">
-            <h1>Header</h1>
+            <h1>Policies</h1>
           </div>
           <div class="col-12 d-flex justify-content-center">
               <img src="img/floral-design-with-curled-edges.png" alt="floral design" class="floral-design-img">
           </div>
           <div class="col-12 content-styling">
-            <h5>Title</h5>
-            <p>Paragraph</p>
-            <h5>Title</h5>
-            <p>Paragraph</p>
+            <h5>Payment Policy</h5>
+            <p>We require a 25% due at time of booking remaining balance due 1 week prior to your desired day</p>
+            <h5>Terms and Conditions</h5>
+            <p>No cancellations or rescheduling can be made within 72 hours of your glamping experience, picnic, or event. Your non-refundable deposit may be used as a credit to reschedule your booking if needed. Once your glamping experience, event or picnic is set up on the day of your reservation, we cannot  cancel or reschedule and your deposit will no be refunded.</p>
           </div>
           <div class="col-12 d-flex justify-content-center">
             <img src="img/floral-design-with-curled-edges.png" alt="floral design" class="floral-design-img">
