--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Details by Cyn | Policies</title>
+    <title>Details by Cyn | Contact</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -54,16 +54,13 @@
         </header>
         <div class="row transparent-bg text-center" >
           <div class="col-12" style="margin-top: 170px;">
-            <h1>Header</h1>
+            <h1>Contact</h1>
           </div>
           <div class="col-12 d-flex justify-content-center">
               <img src="img/floral-design-with-curled-edges.png" alt="floral design" class="floral-design-img">
           </div>
           <div class="col-12 content-styling">
-            <h5>Title</h5>
-            <p>Paragraph</p>
-            <h5>Title</h5>
-            <p>Paragraph</p>
+            <div class="hb-p-622e64eba9c02500079dda04-1"></div><img height="1" width="1" style="display:none" src="https://www.honeybook.com/p.png?pid=622e64eba9c02500079dda04">
           </div>
           <div class="col-12 d-flex justify-content-center">
             <img src="img/floral-design-with-curled-edges.png" alt="floral design" class="floral-design-img">
@@ -92,6 +89,13 @@
       </div>
     </footer>
     <!-- JavaScript files-->
+    <script>
+        (function(h,b,s,n,i,p,e,t) {
+          h._HB_ = h._HB_ || {};h._HB_.pid = i;;;;
+          t=b.createElement(s);t.type="text/javascript";t.async=!0;t.src=n;
+          e=b.getElementsByTagName(s)[0];e.parentNode.insertBefore(t,e);
+      })(window,document,"script","https://widget.honeybook.com/assets_users_production/websiteplacements/placement-controller.min.js","622e64eba9c02500079dda04");
+      </script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="vendor/glightbox/js/glightbox.min.js"></script>
     <script src="js/front.js"></script>
