--- a/glamping.html
+++ b/glamping.html
@@ -28,7 +28,7 @@
       <div class="container-fluid px-0 pnb-4" id="glamping-background" >
         <header class="header">
           <nav class="navbar navbar-expand-lg navbar-light position-absolute w-100" id="navbar">
-            <div class="container"><a class="navbar-brand d-block d-lg-none" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." height="40px" width="60"></a>
+            <div class="container"><a class="navbar-brand d-block d-lg-none" href="home.html"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." height="40px" width="60"></a>
               <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
