book now button

--- a/picnic.html
+++ b/picnic.html
@@ -83,7 +83,7 @@
             <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
         </div>
         <div class="col-12 mb-3">
-          <button type="button" class="btn btn-design">Book Now</button>
+          <a href="contact.html"><button type="button" class="btn btn-design">Book Now</button></a>
         </div>
       </div>
     </section>
