--- a/home.html
+++ b/home.html
@@ -68,10 +68,10 @@
                             <h1>Glamping</h1>
                           </div>
                           <div class="col-12">
-                            <p>Perfect for date nights, family nights, or a weekend getaway right in your backyard!</p>
+                            <p class="lead">Perfect for date nights, family nights, or a weekend getaway right in your backyard!</p>
                           </div>
                           <div class="col d-flex justify-content-center mt-5 mb-5">
-                            <button type="button" class="btn btn-design"><a href="backyard-glamping.html">Learn more</a></button>
+                            <button type="button" class="btn btn-design"><a href="glamping.html">Learn more</a></button>
                           </div>
                         </div>
                       </div>
@@ -84,10 +84,10 @@
                             <h1>Lounge</h1>
                           </div>
                           <div class="col-12">
-                            <p>Perfect for weddings, birthdays, graduations, backyard bbq and parties!</p>
+                            <p class="lead">Perfect for weddings, birthdays, graduations, backyard bbq and parties!</p>
                           </div>
                           <div class="col d-flex justify-content-center mt-5 mb-5">
-                            <button type="button" class="btn btn-design"><a href="backyard-glamping.html">Learn more</a></button>
+                            <button type="button" class="btn btn-design"><a href="lounge.html">Learn more</a></button>
                           </div>
                         </div>
                       </div>
@@ -100,10 +100,10 @@
                             <h1>Picnic</h1>
                           </div>
                           <div class="col-12">
-                            <p>Perfect for a hangout with friends and family!</p>
+                            <p class="lead">Perfect for a hangout with friends and family!</p>
                           </div>
                           <div class="col d-flex justify-content-center mt-5 mb-5">
-                            <button type="button" class="btn btn-design"><a href="backyard-glamping.html">Learn more</a></button>
+                            <button type="button" class="btn btn-design"><a href="picnic.html">Learn more</a></button>
                           </div>
                         </div>
                       </div>
