--- a/glamping.html
+++ b/glamping.html
@@ -66,7 +66,7 @@
               <li>Outdoor/indoor lighting</li>
               <li>Custom letter board announcement</li>
               <li>Board game</li>
-              <li>Set and pick up is all included</li>
+              <li>Set and teardown is included</li>
             </ul>
             <h5>Price</h5>
             <p>$450 a night<sup>*</sup> </p>
