--- a/home.html
+++ b/home.html
@@ -184,7 +184,7 @@
       </div>
     </section>
     <!-- Instagram items-->
-    <section><a class="instagram-section-title d-none d-sm-block" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram me-2"></i>Follow us: @glampingbycyn</a>
+    <section><a class="instagram-section-title d-none d-sm-block" href="https://www.instagram.com/detailsbycyn/" target="_blank"><i class="fab fa-instagram me-2"></i>Follow us: @detailsbycyn</a>
       <div class="container-fluid px-0">
         <div class="row">
           <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CZsGd7tFmUL/" target="_blank"><img class="img-instagram" src="img/HD-photos/add-on5.jpeg" alt="...">
@@ -210,8 +210,8 @@
             <div class="d-flex align-items-center flex-wrap justify-content-center">
               <h6 class="text-muted mb-0 py-2 me-3">Follow us<span class="ms-3">-</span></h6>
               <ul class="list-inline small mb-0 text-white">
-                <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Glamping-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Details-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/detailsbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
               </ul>
             </div>
           </div>
