font color change

--- a/home.html
+++ b/home.html
@@ -100,7 +100,7 @@
                             <h1>Picnic</h1>
                           </div>
                           <div class="col-12">
-                            <p class="lead">Perfect for a hangout with friends and family!</p>
+                            <p class="lead">Perfect for graduations, backyard bbq parties, backdrops, and more!</p>
                           </div>
                           <div class="col d-flex justify-content-center mt-5 mb-5">
                             <button type="button" class="btn btn-design"><a href="picnic.html">Learn more</a></button>
