--- a/picnic.html
+++ b/picnic.html
@@ -73,7 +73,7 @@
               <li>Set up and teardown is included</li>
             </ul>
             <h5>Price</h5>
-            <p>$250 for 2 hours <sup>*</sup> (additional $50 per every couple after)</p>
+            <p>$250 for 2 hours <sup>*</sup> (extra hour can be added on & additional $50 per every couple after)</p>
             <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
         </div>
         <div class="col-12 mb-3">
