--- a/home.html
+++ b/home.html
@@ -125,7 +125,7 @@
             <div class="row">
                 <div class="col pb-5">
                 <h5 class="text-center mt-5">Add-ons</h5>
-                <p class="text-center lead">Customize your Glamping</p>
+                <p class="text-center lead">Customize your Glamping or Picnic</p>
                 <div class="container pt-lg-5 d-flex justify-content-center">
                     <div class="row">
                     <div class="col col-lg-4 g-3 d-flex justify-content-center">
