--- a/glamping.html
+++ b/glamping.html
@@ -82,19 +82,23 @@
     <footer class="py-4" style="background: #111">
       <div class="container text-center">
         <div class="row align-items-center">
-          <div class="col-md-4 text-lg-start logo-font">Details by Cyn</div>
-          <div class="col-md-4 text-center">
+          <div class="col-md-3 text-lg-start logo-font">Details by Cyn</div>
+          <div class="col-md-3 text-center">
             <div class="d-flex align-items-center flex-wrap justify-content-center">
               <h6 class="text-muted mb-0 py-2 me-3">Follow us<span class="ms-3">-</span></h6>
               <ul class="list-inline small mb-0 text-white">
-                <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Glamping-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Details-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/detailsbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
               </ul>
             </div>
           </div>
-          <div class="col-md-4 text-lg-end">
+          <div class="col-md-3 text-lg-end">
             <p class="mb-0 text-muted text-sm text-heading">Template designed by <a href="https://bootstrapious.com/p/juliette-bootstrap-feminine-blog-template" class="">Bootstrapious</a>. </p>
             <!-- If you want to remove the backlink, please purchase the Attribution-Free License. See details in readme.txt or license.txt. Thanks!-->
+          </div>
+          <div class="col-md-3">
+            <a class="text-md mb-0" href="mailto:detailsbycyn@gmail.com"><i class="far fa-envelope me-2"></i>detailsbycyn@gmail.com</a>
+
           </div>
         </div>
       </div>
