--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
       <div class="container-fluid px-0 pnb-4">
         <header class="header">
           <header class="header">
-            <nav class="navbar navbar-expand-lg navbar-light position-absolute w-100" id="navbar">
+            <nav class="navbar navbar-expand-lg navbar-light position-absolute nb-center w-100" id="navbar">
               <div class="container">
                 <a class="navbar-brand d-block d-lg-none" href="home.html">
                   <img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="logo image">
