--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
                   <img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="logo image">
                 </a>
                 <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="home.html">Home </a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
