--- a/contact.html
+++ b/contact.html
@@ -37,18 +37,18 @@
                   <img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="logo">
                 </a>
                 <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse text-center navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="home.html">Home </a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="list-inline-item nav-item"><a class="nav-link" href="home.html">Home </a></li>
+                    <li class="list-inline-item nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                   </ul>
                   <ul class="navbar-nav d-none d-lg-block px-4">
                     <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." width="80"></a></li>
                   </ul>
                   <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" href="glamping.html">Glamping</a></li>
-                    <li class="nav-item"><a class="nav-link" href="lounge.html">Lounge</a></li>
-                    <li class="nav-item"><a class="nav-link" href="picnic.html">Picnic</a></li>
+                    <li class="list-inline-item nav-item"><a class="nav-link" href="glamping.html">Glamping</a></li>
+                    <li class="list-inline-item nav-item"><a class="nav-link" href="lounge.html">Lounge</a></li>
+                    <li class="list-inline-item nav-item"><a class="nav-link" href="picnic.html">Picnic</a></li>
                   </ul>
                 </div>
               </div>
@@ -56,7 +56,7 @@
           </header>
         </header>
         <div class="row transparent-bg text-center" >
-          <div class="col-12" style="margin-top: 170px;">
+          <div class="col-12 headerStyle">
             <h1>Contact</h1>
           </div>
           <div class="col-12 d-flex justify-content-center">
