--- a/glamping.html
+++ b/glamping.html
@@ -30,7 +30,7 @@
           <nav class="navbar navbar-expand-lg navbar-light position-absolute w-100" id="navbar">
             <div class="container"><a class="navbar-brand d-block d-lg-none" href="home.html"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="logo image"></a>
               <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <div class="collapse text-center navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item"><a class="nav-link" href="home.html">Home </a></li>
                   <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -48,7 +48,7 @@
           </nav>
         </header>
         <div class="row transparent-bg">
-          <div class="col-12" style="margin-top: 170px;">
+          <div class="col-12 headerStyle">
               <h1>Glamping</h1>
           </div>
           <div class="col-12">
