--- a/home.html
+++ b/home.html
@@ -29,13 +29,13 @@
       <div class="container-fluid px-0 pnb-4">
         <header class="header">
           <header class="header">
-            <nav class="navbar navbar-expand-lg navbar-light position-absolute nb-center w-100" id="navbar">
+            <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-light position-absolute nb-center w-100" id="navbar">
               <div class="container">
                 <a class="navbar-brand d-block d-lg-none" href="home.html">
                   <img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="logo image">
                 </a>
                 <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
-                <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+                <div class="collapse text-center navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="home.html">Home </a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
