changes in navbar

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
       <div class="container-fluid px-0 pnb-4" id="policies-background">
         <header class="header">
           <header class="header">
-            <nav class="navbar navbar-expand-lg navbar-light position-absolute w-100" id="navbar">
+            <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-light position-absolute w-100" id="navbar">
               <div class="container">
                 <a class="navbar-brand d-block d-lg-none" href="home.html">
                   <img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="logo">
@@ -59,14 +59,8 @@
           <div class="col-12 headerStyle">
             <h1>Contact</h1>
           </div>
-          <div class="col-12 d-flex justify-content-center">
-              <img src="img/floral-design-with-curled-edges.png" alt="floral design" class="floral-design-img">
-          </div>
           <div class="col-12 content-styling">
             <div class="hb-p-622e64eba9c02500079dda04-1"></div><img height="1" width="1" style="display:none" src="https://www.honeybook.com/p.png?pid=622e64eba9c02500079dda04">
-          </div>
-          <div class="col-12 d-flex justify-content-center">
-            <img src="img/floral-design-with-curled-edges.png" alt="floral design" class="floral-design-img">
           </div>
         </div>
       </div>
