--- a/home.html
+++ b/home.html
@@ -28,7 +28,6 @@
     <section class="pb-0">
       <div class="container-fluid px-0 pnb-4">
         <header class="header">
-          <header class="header">
             <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-light position-absolute nb-center w-100" id="navbar">
               <div class="container">
                 <a class="navbar-brand d-block d-lg-none" href="home.html">
@@ -41,7 +40,7 @@
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                   </ul>
                   <ul class="navbar-nav d-none d-lg-block px-4">
-                    <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." width="80"></a></li>
+                    <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="Details by Cyn Logo" width="80"></a></li>
                   </ul>
                   <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link" href="glamping.html">Glamping</a></li>
@@ -51,7 +50,6 @@
                 </div>
               </div>
             </nav>
-          </header>
         </header>
             <div class="carousel slide" data-bs-ride="carousel" id="carouselHeader">
                 <div class="carousel-indicators">
@@ -229,6 +227,8 @@
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="vendor/glightbox/js/glightbox.min.js"></script>
     <script src="js/front.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <!-- FontAwesome CSS - loading as last, so it doesn't block rendering-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/20601f6150.js" crossorigin="anonymous"></script>
