--- a/home.html
+++ b/home.html
@@ -170,7 +170,7 @@
                 <blockquote>
                   <p>
                     <span class="me-1 small"><i class="fas fa-quote-left"></i></span>
-                    Thank you to Details By Cyn for making this anniversary surprise happen!!! We have been planning this for quite some time and it was so hard to keep this a secret from lan!! It was so special and truly unforgettable. Thank you for everything.                    <span class="ms-1 small"><i class="fas fa-quote-right"></i></span>
+                    Thank you to Details by Cyn for making this anniversary surprise happen!!! We have been planning this for quite some time and it was so hard to keep this a secret from lan!! It was so special and truly unforgettable. Thank you for everything.                    <span class="ms-1 small"><i class="fas fa-quote-right"></i></span>
                   </p>
                 </blockquote>
                 <!-- Info -->
