spelling errors corrections

--- a/glamping.html
+++ b/glamping.html
@@ -48,7 +48,7 @@
           </nav>
         </header>
         <div class="row transparent-bg">
-          <div class="col-12 headerStyle">
+          <div class="col-12 headerMargin">
               <h1>Glamping</h1>
           </div>
           <div class="col-12">
