--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <!-- navbar-->
     <!-- Main post-->
     <section class="pb-0">
-      <div class="container-fluid px-0 pnb-4" id="policies-background">
+      <div class="container-fluid px-0 pnb-4" id="contact-background">
         <header class="header">
           <header class="header">
             <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-light position-absolute w-100" id="navbar">
@@ -56,7 +56,7 @@
           </header>
         </header>
         <div class="row transparent-bg text-center" >
-          <div class="col-12 headerStyle">
+          <div class="col-12 headerMargin">
             <h1>Contact</h1>
           </div>
           <div class="col-12 content-styling">
