--- a/lounge.html
+++ b/lounge.html
@@ -51,7 +51,7 @@
           </header>
         </header>
         <div class="row transparent-bg text-center">
-          <div class="col-12 headerStyle">
+          <div class="col-12 headerMargin">
             <h1>Lounge</h1>
           </div>
           <div class="col-12">
