alt name changes

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                     <li class="list-inline-item nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                   </ul>
                   <ul class="navbar-nav d-none d-lg-block px-4">
-                    <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." width="80"></a></li>
+                    <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="logo" width="80"></a></li>
                   </ul>
                   <ul class="navbar-nav me-auto">
                     <li class="list-inline-item nav-item"><a class="nav-link" href="glamping.html">Glamping</a></li>
@@ -70,7 +70,7 @@
         <div class="row align-items-center">
             <div class="col-sm-12 col-lg-4">
               <a href="home.html">
-                <img src="img/details-by-cyn-dark-removebg.png" class="logo-image-footer" alt="logo image">
+                <img src="img/details-by-cyn-dark-removebg.png" class="logo-image-footer" alt="logo dark">
               </a>
             </div>
             <div class="col-sm-12 col-lg-4 text-center">
