--- a/home.html
+++ b/home.html
@@ -128,19 +128,19 @@
                     <div class="row">
                     <div class="col col-lg-4 g-3 d-flex justify-content-center">
                         <figure>
-                        <img class="add-on-imgs" id="charcuterie-add-on" src="img/HD-photos/add-on3.jpeg" alt="">
+                        <img class="add-on-imgs" id="charcuterie-add-on" src="img/HD-photos/add-on3.jpeg" alt="charcuterie add-on">
                         <figcaption class="lead text-center add-on-text pt-3">Charcuterie</figcaption>
                         </figure>
                     </div>
                     <div class="col col-lg-4 g-3 d-flex justify-content-center">
                         <figure>
-                        <img class="add-on-imgs" id="camera-add-on" src="img/HD-photos/add-on1.jpeg" alt="">
+                        <img class="add-on-imgs" id="camera-add-on" src="img/HD-photos/add-on1.jpeg" alt="instant camera add-on">
                         <figcaption class="lead text-center add-on-text pt-3">Instant camera</figcaption>
                         </figure>
                     </div>
                     <div class="col col-lg-4 g-3 d-flex justify-content-center">
                         <figure>
-                        <img class="add-on-imgs" id="balloons-add-on" src="img/HD-photos/add-on5.jpeg" alt="">
+                        <img class="add-on-imgs" id="balloons-add-on" src="img/HD-photos/add-on5.jpeg" alt="ballon add-on">
                         <figcaption class="lead text-center add-on-text pt-3">Balloons</figcaption>
                         </figure>
                     </div>
@@ -185,17 +185,17 @@
     <section><a class="instagram-section-title d-none d-sm-block" href="https://www.instagram.com/detailsbycyn/" target="_blank"><i class="fab fa-instagram me-2"></i>Follow us: @detailsbycyn</a>
       <div class="container-fluid px-0">
         <div class="row">
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CZsGd7tFmUL/" target="_blank"><img class="img-instagram" src="img/HD-photos/add-on5.jpeg" alt="...">
+          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CZsGd7tFmUL/" target="_blank"><img class="img-instagram" src="img/HD-photos/add-on5.jpeg" alt="instagram photo 1">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CVde2hQFZHE/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-clients2.jpeg" alt="...">
+          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CVde2hQFZHE/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-clients2.jpeg" alt="instagram photo 2">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CYcH50hFL5a/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-tent3.jpeg" alt="...">
+          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CYcH50hFL5a/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-tent3.jpeg" alt="instagram photo 3">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CV3FEhis-cL/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-clients3.jpeg" alt="...">
+          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CV3FEhis-cL/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-clients3.jpeg" alt="instagram photo 4">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CWBwbm_FtRX/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-tent11.jpeg" alt="...">
+          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CWBwbm_FtRX/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-tent11.jpeg" alt="instagram photo 5">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CXmNU2ylKcu/" target="_blank"><img class="img-instagram" src="img/HD-photos/inside-tent1.jpeg" alt="...">
+          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CXmNU2ylKcu/" target="_blank"><img class="img-instagram" src="img/HD-photos/inside-tent1.jpeg" alt="instagram photo 6">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
         </div>
       </div>
