--- a/glamping.html
+++ b/glamping.html
@@ -28,7 +28,7 @@
       <div class="container-fluid px-0 pnb-4" id="glamping-background" >
         <header class="header">
           <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-light position-absolute w-100" id="navbar">
-            <div class="container"><a class="navbar-brand d-block d-lg-none" href="home.html"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="logo image"></a>
+            <div class="container"><a class="navbar-brand d-block d-lg-none" href="home.html"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="logo"></a>
               <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
               <div class="collapse text-center navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
@@ -36,7 +36,7 @@
                   <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
                 <ul class="navbar-nav d-none d-lg-block px-4">
-                  <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." width="80"></a></li>
+                  <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="logo" width="80"></a></li>
                 </ul>
                 <ul class="navbar-nav me-auto">
                   <li class="nav-item"><a class="nav-link" href="glamping.html">Glamping</a></li>
@@ -84,7 +84,7 @@
         <div class="row align-items-center">
             <div class="col-sm-12 col-lg-4">
               <a href="home.html">
-                <img src="img/details-by-cyn-dark-removebg.png" class="logo-image-footer" alt="logo image">
+                <img src="img/details-by-cyn-dark-removebg.png" class="logo-image-footer" alt="logo dark">
               </a>
             </div>
             <div class="col-sm-12 col-lg-4 text-center">
