--- a/glamping.html
+++ b/glamping.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <section class="pb-0">
-      <div class="container-fluid px-0 pnb-4" id="glamping-background" >
+      <div class="container-fluid px-0 pnb-4" id="glamping-backgroundd" >
         <header class="header">
           <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-light position-absolute w-100" id="navbar">
             <div class="container"><a class="navbar-brand d-block d-lg-none" href="home.html"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="logo"></a>
@@ -48,11 +48,11 @@
           </nav>
         </header>
         <div class="row transparent-bg">
-          <div class="col-12 headerMargin">
-              <h1>Glamping</h1>
-          </div>
-          <div class="col-12">
-            <img class="mt-4" src="/img/HD-photos/inside-tent1.jpeg" alt="Inside Lounge Tent">
+          <div class="p-0 col-12 package-img-container">
+            <img class="package-img" src="/img/HD-photos/inside-tent1.jpeg" alt="Inside Lounge Tent">
+            <div class=" centered">
+              <h1 class="mt-3">Glamping</h1>
+            </div>
           </div>
           <div class="col-12 content-styling">
             <h5 class="mt-4">Includes</h5>
@@ -71,9 +71,9 @@
             <h5>Price</h5>
             <p>$450 a night<sup>*</sup> </p>
             <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
-          </div>
-          <div class="col-12 mb-3">
-            <a href="contact.html"><button type="button" class="btn btn-design">Book Now</button></a>
+            <div class="pt-4 pb-5">
+              <a href="contact.html"><button type="button" class="btn btn-design">Book Now</button></a>
+            </div>
           </div>
         </div>
       </div>
