--- a/lounge.html
+++ b/lounge.html
@@ -26,7 +26,7 @@
   <body>
     <!-- navbar-->
     <section class="pb-0">
-      <div class="container-fluid px-0 pnb-4" id="lounge-background">
+      <div class="container-fluid px-0 pnb-4" id="loungee-background">
         <header class="header">
           <header class="header">
             <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-light position-absolute w-100" id="navbar">
@@ -51,13 +51,12 @@
           </header>
         </header>
         <div class="row transparent-bg text-center">
-          <div class="col-12 headerMargin">
-            <h1>Lounge</h1>
+          <div class="p-0 col-12 package-img-container">
+            <img class="package-img" src="/img/HD-photos/glamp-tent11.jpeg" alt="Glamp Clients">
+            <div class=" centered">
+              <h1 class="mt-3">Lounge</h1>
+            </div>
           </div>
-          <div class="col-12">
-            <img class="mt-4" src="/img/HD-photos/glamp-clients.jpeg" alt="cynthia's family">
-          </div>
-
           <div class="col-12 content-styling">
             <h5 class="mt-4">Includes</h5>
             <ul class="px-5">
@@ -76,11 +75,10 @@
             <h5>Price</h5>
             <p>$450 a night<sup>*</sup></p>
             <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
+            <div class="pt-3 pb-4">
+              <a href="contact.html"><button type="button" class="btn btn-design">Book Now</button></a>
+            </div>
           </div>
-          <div class="col-12 mb-3">
-            <a href="contact.html"><button type="button" class="btn btn-design">Book Now</button></a>
-          </div>
-        
         </div>
 
 
