--- a/picnic.html
+++ b/picnic.html
@@ -26,7 +26,7 @@
   <body>
     <!-- navbar-->
     <section class="pb-0">
-      <div class="container-fluid px-0 pnb-4" id="picnic-background" >
+      <div class="container-fluid px-0 pnb-4" id="picnicc-background" >
         <header class="header">
           <header class="header">
             <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-light position-absolute w-100" id="navbar">
@@ -51,11 +51,11 @@
           </header>
         </header>
         <div class="row transparent-bg text-center">
-          <div class="col-12 headerMargin">
-            <h1>Picnic</h1>
-          </div>
-          <div class="col-12">
-            <img class="mt-4" src="/img/HD-photos/picnic-3.JPG">
+          <div class="p-0 col-12 package-img-container">
+            <img class="package-img" src="/img/HD-photos/picnic-3.JPG" alt="Glamp Clients Picnic">
+            <div class=" centered">
+              <h1 class="mt-3">Picnic</h1>
+            </div>
           </div>
           <div class="col-12 content-styling">
             <h5 class="mt-5">Includes</h5>
@@ -75,9 +75,9 @@
             <h5>Price</h5>
             <p>$250 for 2 hours <sup>*</sup> (extra hour can be added on & additional $50 per every couple after)</p>
             <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
-        </div>
-        <div class="col-12 mb-3">
-          <a href="contact.html"><button type="button" class="btn btn-design">Book Now</button></a>
+            <div class="pb-3">
+              <a href="contact.html"><button type="button" class="btn btn-design">Book Now</button></a>
+            </div>
         </div>
       </div>
     </section>
