--- a/glamping.html
+++ b/glamping.html
@@ -56,7 +56,7 @@
           </div>
           <div class="col-12 content-styling">
             <h5 class="mt-4">Includes</h5>
-            <ul class="px-5">
+            <ul class="px-5 package-list">
               <li>Weather-proof canvas 4.5m bell tent (requires 25’ by 25’ space)</li>
               <li>Queen memory foam bed</li>
               <li>Decor, rugs and throw pillows  </li>
@@ -70,7 +70,7 @@
             </ul>
             <h5>Price</h5>
             <p>$450 a night<sup>*</sup> </p>
-            <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
+            <p style="font-size: small;"><sup>*</sup>25% due at time of booking</p>
             <div class="pt-4 pb-5">
               <a href="contact.html"><button type="button" class="btn btn-design">Book Now</button></a>
             </div>
