--- a/lounge.html
+++ b/lounge.html
@@ -74,7 +74,7 @@
             </ul>
             <h5>Price</h5>
             <p>$450 a night<sup>*</sup></p>
-            <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
+            <p style="font-size: small;"><sup>*</sup>25% due at time of booking</p>
             <div class="pt-3 pb-4">
               <a href="contact.html"><button type="button" class="btn btn-design">Book Now</button></a>
             </div>
