--- a/picnic.html
+++ b/picnic.html
@@ -74,7 +74,7 @@
             </ul>
             <h5>Price</h5>
             <p>$250 for 2 hours <sup>*</sup> (extra hour can be added on & additional $50 per every couple after)</p>
-            <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
+            <p style="font-size: small;"><sup>*</sup>25% due at time of booking</p>
             <div class="pb-3">
               <a href="contact.html"><button type="button" class="btn btn-design">Book Now</button></a>
             </div>
